tests/nested-overflow.chg.stderr
type error: type annotations needed

  let x = bitcast(0);
          ^^^^^^^^^^
type error: type annotations needed

  x = bitcast(1);
      ^^^^^^^^^^
